# ifsp2024

./: .gitignore  .pylintrc  README.md  data.dvc  environment.yml  setup.cfg
.dvc/: config
lecture01/: load_color_image.py  load_grayscale_image.py  slice_image_channels.py
lecture02/: binary_image.py  camera_capture.py  face_detector.py  geometric_transformations.py  negative_image.py  salt_and_pepper_filter.py  video_capture.py
lecture03/: fast_face_landmarks_predictor.py  mp_facemesh_detector.py  mp_hand_tracking.py  simple_face_detector.py  simple_face_landmarks_predictor.py  teachable_machine_model.py
